# lfx-v2-mockdata

./: .cspell.json  .env.example  .gitignore  .mega-linter.yml  .yamllint.yml  CLAUDE.md  Makefile  README.md  docker-compose.yml  generator.go  generator_test.go  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: mega-linter.yml  test.yml
mockserver/: .gitignore  Dockerfile  README.md  go.mod  server.go
playbooks/committees/base_committees/: buf_committees.yaml
playbooks/projects/base_projects/: 0_root.yaml  1_tlf.yaml  2_incorporated.yaml  3_umbrellas.yaml
playbooks/projects/extra_projects/: n_depth.yaml
playbooks/projects/recreate_root_project/: root.yaml
playbooks/projects/root_project_access/: global_groups.yaml
playbooks/v1_meetings/umbrella_board_meeting/: 0_meeting.yaml
scripts/: mock-heimdall-jwt.sh
src/custom_logging/: __init__.py
src/lfx_v2_mockdata/: __init__.py
templates/: extra_incorporated.yaml  global_groups.yaml  index.yaml  n_depth.yaml  root.yaml
