# Copyright The Linux Foundation and each contributor to LFX.
# SPDX-License-Identifier: MIT

[project]
name = "lfx-v2-mockdata"
version = "0.1.0"
requires-python = "~=3.12.5"
dependencies = [
    "faker>=37.12.0",
    "jinja2>=3.1.6",
    "jmespath>=1.0.1",
    "names-generator>=0.2.0",
    "nats-py>=2.9.0",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "python-lorem>=1.3.0.post3",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "structlog>=24.4.0",
    "urllib3>=2.5.0",
]

[project.scripts]
lfx-v2-mockdata = "lfx_v2_mockdata:main"

[build-system]
requires = ["uv_build>=0.7.6,<0.8.0"]
build-backend = "uv_build"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py312"
# For linting only; not intended for `ruff format`.
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "G", "I"]

[dependency-groups]
dev = [
  "mypy>=1.17.1",
  "ruff>=0.6.2",
  "types-jmespath>=1.0.2.20250809",
  "types-pyyaml>=6.0.12.20250822",
  "types-requests>=2.32.4.20250809",
]
